packages/ui/src/components/Radio/Radio.module.scss
@use "@neetly/ui";

.container {
  display: inline-grid;
  grid-template-columns: auto 1fr;
  align-items: center;
  gap: 0.5rem;
  user-select: none;
  cursor: pointer;
  transition: opacity 150ms;

  &[data-disabled] {
    opacity: 0.5;
    cursor: default;
  }
}

.radio {
  @include ui.visually-hidden;
}

.content {
  display: grid;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 50%;
  background-color: ui.$color-primary-overlay-01;
  box-shadow: inset 0 0 0 2px ui.$color-primary-overlay-02;
  transition: background-color 150ms, transform 150ms;
}

.indicator {
  display: grid;
  border-radius: inherit;
  background-color: ui.$color-primary;
  transition: opacity 150ms;

  &::before {
    content: "";
    grid-area: 1 / 1;
    border-radius: inherit;
    transition: background-color 150ms;
  }
}

.indicatorIcon {
  display: grid;
  place-items: center;
  grid-area: 1 / 1;

  &::before {
    content: "";
    width: 0.5rem;
    height: 0.5rem;
    border-radius: 50%;
    background-color: ui.$color-on-primary;
  }
}

.radio {
  &:not(:checked) + .content .indicator {
    opacity: 0;
  }

  @include ui.hover {
    + .content {
      background-color: ui.$color-primary-overlay-02;
    }

    + .content .indicator::before {
      background-color: ui.$color-overlay-99;
    }
  }

  @include ui.active {
    + .content {
      transform: scale(0.95);
    }
  }

  &:focus-visible + .content {
    @include ui.focus-ring(ui.$color-primary);
  }
}

// https://bugs.chromium.org/p/chromium/issues/detail?id=1211182
.container:not([data-disabled]) {
  @include ui.active {
    .content {
      transform: scale(0.95);
    }
  }
}

.label {
  @include ui.typography-ui(1rem, medium);

  color: ui.$color-neutral-variant-accent;
}

